--- a/environment.yml
+++ b/environment.yml
@@ -1,23 +1,23 @@
 name: time_imputation
 channels:
-  - defaults
   - conda-forge
+  - defaults
 dependencies:
   - python=3.11
   - pytorch-cuda=12.1
   - pytorch=2.5.1
   - tensorboard
-  - xarray
+  - xarray=2025.10.1
   - hdf5
   - glasbey
-  - matplotlib
-  - pandas
-  - scipy
-  - numpy
-  - seaborn
-  - scikit-learn
-  - cartopy
-  - plotly
+  - matplotlib=3.10.6
+  - pandas=2.3.3
+  - scipy=1.16.2
+  - numpy=2.3.3
+  - seaborn=0.13.2
+  - scikit-learn=1.7.2
+  - cartopy=0.25.0
+  - plotly=6.3.1
   - gsw
   - pyqt
   - ipython
@@ -25,14 +25,14 @@ dependencies:
   - geopy
   - datetimerange
   - netcdf4
-  - scikit-gstat
-  - xskillscore
+  - scikit-gstat=1.0.21
+  - xskillscore=0.0.27
   - haversine
   - pandas-stubs=2.3.2.250926
   - gstools
   - esda
   - xarray-spatial
-  - kneed
-  - pip
+  - kneed=0.8.5
+  - pip=25.2
   - pip:
       git+https://github.com/dnowacki-usgs/missingpy.git
