--- a/environment.yml
+++ b/environment.yml
@@ -25,14 +25,17 @@ dependencies:
   - geopy
   - datetimerange
   - netcdf4
-  - scikit-gstat=1.0.21
-  - xskillscore=0.0.27
+  # - scikit-gstat=1.0.21
+  #- xskillscore=0.0.27
   - haversine
-  - pandas-stubs=2.3.2.250926
+  #- pandas-stubs=2.3.2.250926
   - gstools
-  - esda
-  - xarray-spatial
+  #- esda
+  #- xarray-spatial
   - kneed=0.8.5
   - pip=25.2
+  - ffmpeg
+  - optuna
+  - kaleido
   - pip:
       git+https://github.com/dnowacki-usgs/missingpy.git
